# autoApply

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  roadmap.md
apps/api/: Dockerfile  celerybeat-schedule  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_profile_tech_stacks.py  0003_embeddings.py  0004_phase3.py  0005_task_logs.py
apps/api/app/: __init__.py  main.py  worker.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: router.py
apps/api/app/core/: config.py  errors.py  logging.py  security.py
apps/api/app/db/: models.py  repositories.py  session.py
apps/api/app/modules/ai/: ats_service.py  company_service.py  embedding_service.py  interview_service.py  router.py  salary_service.py  services.py
apps/api/app/modules/analytics/: router.py
apps/api/app/modules/applications/: router.py
apps/api/app/modules/auth/: router.py  schemas.py  service.py
apps/api/app/modules/automation/: adapter_ashby.py  adapter_greenhouse.py  adapter_lever.py  adapter_workday.py  engine.py  router.py
apps/api/app/modules/email/: router.py  sync_service.py
apps/api/app/modules/jobs/: matcher.py  router.py  schemas.py
apps/api/app/modules/notifications/: router.py
apps/api/app/modules/profiles/: router.py  schemas.py
apps/api/app/modules/resumes/: latex_service.py  parser.py  router.py  (+1 more)
apps/api/autoapply_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: test_automation_engine.py  test_connectors.py  test_matcher.py  test_security.py
(+87 files in other folders)
