[project]
name = "autoapply-api"
version = "0.1.0"
description = "FastAPI backend for AutoApply AI"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "argon2-cffi>=23.1.0",
  "asyncpg>=0.29.0",
  "boto3>=1.34.0",
  "celery>=5.4.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "openai>=1.40.0",
  "passlib>=1.7.4",
  "pdfplumber>=0.11.0",
  "playwright>=1.45.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "pyjwt>=2.9.0",
  "python-docx>=1.1.2",
  "python-multipart>=0.0.9",
  "redis>=5.0.8",
  "sqlalchemy[asyncio]>=2.0.32",
  "structlog>=24.4.0",
  "tenacity>=8.5.0",
  "uvicorn[standard]>=0.30.5"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.5.7"
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
